# llm-workshop

./: .gitignore  LICENSE  pyproject.toml
mygpt2/: train_gpt2.py
test/: super.py  tensor.py
transformer/: infer.py  play.ipynb  train.py  train_bpe.py
transformer/data/: train_wmt.ipynb
