[project]
name = "llm-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=5.0.0",
    "ipykernel>=7.2.0",
    "tiktoken>=0.13.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.10.2",
]
